# panda-python-packages

./: .gitignore  GITHUB_SETUP.md  Makefile  PAT_SETUP.md  PYPI_SETUP.md  README.md  pyproject.toml
.github/workflows/: publish.yml
panda_utils/: README.md  pyproject.toml
panda_utils/src/panda_utils/: __init__.py
src/panda_python_packages/: __init__.py  singleton.py
tests/: README.md  test_singleton.py
