[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# 必须与 GitHub 仓库名完全一致，不能用下划线代替横线！
name = "panda-python-packages"
version = "0.1.0"
description = 'A collection of Python utilities for Panda projects'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Panda", email = "panda@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/panda_python_packages"]

[project.urls]
Homepage = "https://github.com/panda-wayback/panda-python-packages"
