[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-utils"
dynamic = ["version"]
description = 'A simple utility library for Panda projects'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Panda", email = "panda@example.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/panda/panda-python-packages#readme"
Issues = "https://github.com/panda/panda-python-packages/issues"
Source = "https://github.com/panda/panda-python-packages"

[tool.hatch.version]
path = "src/panda_utils/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/panda_utils"]
